@@ -23,8 +23,9 @@ choose-mirror (1.16) UNRELEASED; urgency=low
   * Move some configurable stuff to the .h file.
   * Remove support for PREFERRED_DISTRIBUTION environment variable (tmtowtdi).
   * Formatting and comment fixes.
+  * Move proxy env var handling code to the function that asks for a proxy.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 18 Oct 2005 17:24:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 18 Oct 2005 19:04:12 -0400
 
 choose-mirror (1.15) unstable; urgency=low
 
